--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -33,6 +33,7 @@ jobs:
       with:
         name: production-files
         path: ./build
+        if-no-files-found: error
 
   deploy:
     name: Deploy
