--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -32,7 +32,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: production-files
-        path: ./build
+        path: frontend/build
         if-no-files-found: error
 
   deploy:
@@ -46,7 +46,7 @@ jobs:
         uses: actions/download-artifact@v2
         with: 
           name: production-files
-          path: ./build
+          path: frontend/build
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
