--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -46,13 +46,13 @@ jobs:
         uses: actions/download-artifact@v2
         with: 
           name: production-files
-          path: ./build
+          path: ${{ github.workspace }}
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with: 
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          publish_dir: ${{ github.workspace }}
 
 
 
